@@ -32,7 +32,7 @@ int LMSLifeHPs[CLASSCOUNT][LMSMODES] =
 {
     {200, 200, 400, 600, 800, 1000},
     {150, 150, 250, 350, 450, 550},
-    {200, 200, 400, 600, 800, 1000},
+    {100, 100, 200, 300, 400, 5000},
     {150, 150, 300, 450, 600, 750},
     {100, 100, 200, 300, 400, 500},
 };
@@ -43,7 +43,7 @@ int LMSLifeArmors[CLASSCOUNT][LMSMODES] =
 {
     {"", "CyberLMSArmor1",   "CyberLMSArmor2",   "CyberLMSArmor3",   "CyberLMSArmor4",   "CyberLMSArmor5"},  
     {"", "DSparilLMSArmor1", "DSparilLMSArmor2", "DSparilLMSArmor3", "DSparilLMSArmor4", "DSparilLMSArmor5"},
-    {"", "", "", "", "", ""},  
+    {"", "HitlerLMSArmor1",  "HitlerLMSArmor2",  "HitlerLMSArmor3",  "HitlerLMSArmor4",  "HitlerLMSArmor5"},  
     {"", "KoraxLMSArmor1",   "KoraxLMSArmor2",   "KoraxLMSArmor3",   "KoraxLMSArmor4",   "KoraxLMSArmor5"},   
     {"", "TfearLMSArmor1",   "TfearLMSArmor2",   "TfearLMSArmor3",   "TfearLMSArmor4",   "TfearLMSArmor5"},   
 };
@@ -91,4 +91,6 @@ int ChangelogNaraka =
 - Admiral Tfear now has (some of) his proper sprites!\n\
 - Summoned Pfhor now inherit colors from their summoner.\n\
 - By popular request, there is now a Mana Jewel at the bottom of Korax's HUD, indicating what weapon is equipped by color association.\n\
-- Heroes and Villains can now work side by side in co-op.";
+- Heroes and Villains can now work side by side in co-op without getting stuck on each other.\n\
+- Minions no longer bring Invasion to a screeching halt.\n\
+- Up to seven Pfhor Troopers can now be summoned. Their max damage range has been decreased from 15 to 10.";
