@@ -391,6 +391,7 @@ actor DSparilLightningTLMS : DSparilLightningCoop
 actor DSparilWizard : Wizard2
 {
 	-COUNTKILL
+	-ISMONSTER
     Health 130
     DamageFactor "DSparilDamage", 0.0
     //+FRIENDLY
@@ -453,6 +454,7 @@ actor DSparilWizard : Wizard2
 actor DSparilWizardTLMS : DSparilWizard
 {
 	-COUNTKILL
+	-ISMONSTER
 	DamageFactor "VillainTeam", 0.0
 	DamageFactor "VillainTeamWithSelfDamage", 0.0
 	States
@@ -480,6 +482,7 @@ actor DSparilWizardTLMS : DSparilWizard
 actor DSparilWizardCoop : DSparilWizard
 {
 	-COUNTKILL
+	-ISMONSTER
     +THRUSPECIES
 	Species "Player"
 	DamageFactor "DukeExplosive", 0.0
@@ -511,6 +514,7 @@ actor DSparilWizardCoop : DSparilWizard
 actor DSparilWizard2 : DSparilWizard
 {
 	-COUNTKILL
+	-ISMONSTER
     States
     {
       Spawn:
@@ -534,6 +538,7 @@ actor DSparilWizard2 : DSparilWizard
 actor DSparilWizardTLMS2 : DSparilWizard2
 {
 	-COUNTKILL
+	-ISMONSTER
 	DamageFactor "VillainTeam", 0.0
 	DamageFactor "VillainTeamWithSelfDamage", 0.0
 	States
@@ -560,6 +565,7 @@ actor DSparilWizardTLMS2 : DSparilWizard2
 actor DSparilWizardCoop2 : DSparilWizard2
 {
 	-COUNTKILL
+	-ISMONSTER
     +THRUSPECIES
 	Species "Player"
 	DamageFactor "DukeExplosive", 0.0
